# lightpipes

./: .gitignore  4_int.c  AUTHORS  ChangeLog  Copyright  INSTALL  Jamroot  Makefile.am  README  TODO  a_phase.c  absorber.c  aclocal.m4  b_mix.c  b_split.c  begin.c  c_matlab.c  c_xplot.c  circ_ap.c  circ_screen.c  configure.ac  convert.c  cros_out.c  doxygen.am  doxygen.cfg  fcrypt.c  fft_prop.c  fftn.c~  fftn.h  fil_ter.c  file_int.c  file_pgm.c  file_pha.c  file_ps.c  forvard.c  forward.c  fresnel.c  frsn_prop.c  fullpath.sh  gamma.c  (+29 more)
cmdline/: reg.pgm  res_spher  shearing  show  slit  twgr
cmdline/dos/: arb.f  holo.bat  inverse.bat  reconstr.bat
docs/: Jamfile
docs/api/: .gitignore  Doxyfile  Jamfile  mainpage.h
examples/: arbitrary  spat_fil
examples/c++/: .gitignore  Jamfile  zernike_test.cpp
examples/cmdline/: README  arbitrary  farfield  holo  interf.sh  inverse  lenslike.sh  med.f  r_interf  radial  reconstr.sh  res_spher  shearing  show  slit  spat_fil  twgr  unst_res  young
examples/cmdline/dos/: shearing.bat  unst_res.bat
examples/dos/: arbitrar.bat  farfield.bat  i_2  invers.bat  r_interf.bat
examples/octave/: FarField.m  Foclens.m  LG_from_axicon.m  OneHole.m  Shear.m  ThreeHoles.m  TwoHoles.m  TwymanGreen.m  Unstab.m  grating.m  hollow_beam.m  hollow_beam_scalped.m  hollow_beam_v2.m  load_LG.m  mymesh.m  physical.m  propagate_.m  testaxicon.m  testaxicon_lens.m  tlens.m  tlens_gaussian.m  torus.m
examples/python/: FarField.py  Foclens.py  LG_from_axicon.py  OneHole.py  Shear.py  ThreeHoles.py  TwoHoles.py  TwymanGreen.py  Unstab.py  common.py  hollow_beam.py  hollow_beam_scalped.py  hollow_beam_v2.py  non_square_field_binary_grating.py  non_square_field_blazed_grating.py  testaxicon.py  testaxicon_lens.py  tlens.py  tlens_gaussian.py  torus.py  zernike.py
m4/: ax_prefix_config_h.m4
manual/: README  index.html
octave/: Jamfile  LPAxicon.C  LPAxicon.cpp  LPBeamMix.m  LPBegin.cpp  LPCircAperture.C  LPCircAperture.cpp  LPCircScreen.cpp  LPCompatible.m  LPConvert.cpp  LPForvard.C  LPForward.cpp  LPFresnel.C  LPGain.cpp  LPGaussAperture.C  LPGaussAperture.cpp  LPGaussScreen.C  LPGaussScreen.cpp  LPIntAttenuator.m  LPIntensity.m  LPInterpol.C  LPLens.C  LPLens.cpp  LPLensForvard.cpp  LPLensFresnel.C  LPMultHelp.m  LPMultIntensity.m  LPMultPhase.m  LPNormal.C  LPPhase.m  LPPipFFT.cpp  LPPolarizer.m  LPRandomIntensity.m  LPRandomPhase.m  LPRectAperture.cpp  LPRectScreen.cpp  LPSteps.cpp  LPStrehl.cpp  LPSubIntensity.m  LPSubPhase.m  (+10 more)
python/: Jamfile
python/lightpipes/: __init__.py  _lightpipes.cpp  grating.py  lg.py  randomize.py
python/lightpipes/grating/: __init__.py
scr_dos/: i_1  interf.bat  radial.bat  readme  res_gaus.bat  res_sphe.bat  slit.bat  twgr.bat  young.bat
scripts/: COPYING  Copyright  arbitrary  farfield  interf.sh  inverse  lenslike.sh  r_interf  radial  reconstr.sh  shearing  show  slit  twgr  unst_res  young
src/: Makefile.am
src/lib/: Field.C  Field.h  Makefile.am  config.h.in  fftn.c  fftn.h  lightpipes.doxy
src/lightpipes/: Field.cpp  Field.h
src/progs/: Jamfile  Makefile.am  absorber.C  absorber.cpp  axicon.C  axicon.cpp  b_mix.C  b_mix.cpp  begin.C  begin.cpp  circ_ap.C  circ_ap.cpp  circ_screen.C  circ_screen.cpp  convert.C  convert.cpp  cros_out.C  cros_out.cpp  file_pgm.C  file_pgm.cpp  forvard.C  forvard.cpp  forward.C  forward.cpp  fresnel.C  fresnel.cpp  gauss.C  gauss.cpp  gauss_screen.C  gauss_screen.cpp  interpol.C  interpol.cpp  l_amplif.C  l_amplif.cpp  lens.C  lens.cpp  lens_forvard.C  lens_forvard.cpp  lens_fresn.C  lens_fresn.cpp  (+20 more)
src/progs/obsolete/: README  file_int.c  file_ps.C
src/progs/to-update/: 4_int.c  README  a_phase.c  b_split.c  c_matlab.c  c_xplot.c  fil_ter.c  file_pha.c  gamma.c  interp1.c  interpol.c  mask.c  random.c  scale.c  steps.C  steps1.C  test.c  unf3.c  unf4.c
