# Copyright 2006 Spencer Olson

bin_PROGRAMS = \
        absorber \
        axicon \
        begin \
        b_mix \
        circ_ap \
        circ_screen \
        convert \
        cros_out \
        file_pgm \
        forvard \
        forward \
        fresnel \
        gauss \
        gauss_screen \
        interpol \
        l_amplif \
        lens \
        lens_forvard \
        lens_fresn \
        negate \
        normal \
        pip_fft \
        rect_ap \
        rect_screen \
        strehl \
        test \
        tilt \
        tor_lens \
        zernike

#       file_ps 
#       steps1 
#       steps

INCLUDES   = -I../include
LIBS       = -L../lib -llightpipes

absorber_SOURCES        = absorber.C
axicon_SOURCES          = axicon.C
begin_SOURCES           = begin.C
b_mix_SOURCES           = b_mix.C
circ_ap_SOURCES         = circ_ap.C
circ_screen_SOURCES     = circ_screen.C
convert_SOURCES         = convert.C
cros_out_SOURCES        = cros_out.C
file_pgm_SOURCES        = file_pgm.C
#file_ps_SOURCES         = file_ps.C
forvard_SOURCES         = forvard.C
forward_SOURCES         = forward.C
fresnel_SOURCES         = fresnel.C
gauss_SOURCES           = gauss.C
gauss_screen_SOURCES    = gauss_screen.C
l_amplif_SOURCES        = l_amplif.C
interpol_SOURCES        = interpol.C
lens_SOURCES            = lens.C
lens_forvard_SOURCES    = lens_forvard.C
lens_fresn_SOURCES      = lens_fresn.C
negate_SOURCES          = negate.C
normal_SOURCES          = normal.C
pip_fft_SOURCES         = pip_fft.C
rect_ap_SOURCES         = rect_ap.C
rect_screen_SOURCES     = rect_screen.C
#steps1_SOURCES          = steps1.C
#steps_SOURCES           = steps.C
strehl_SOURCES          = strehl.C
test_SOURCES            = test.C
tilt_SOURCES            = tilt.C
tor_lens_SOURCES        = tor_lens.C
zernike_SOURCES         = zernike.C
